# bare_server

./: Cargo.toml  Dockerfile  Makefile.toml  cspell.json  docker-compose.yml
src/: batch_params.rs  catcher.rs  config.rs  db.rs  fairing.rs  filter.rs  forward.rs  guard.rs  main.rs  params.rs  responder.rs  utils.rs
src/api/: action.rs  algorithm.rs  camera.rs  favorite_action.rs  hairdo.rs  material.rs  mod.rs  role.rs  scene.rs  timbre.rs
src/api/action/: action.rs  category.rs  mod.rs
src/api/costume/: category.rs  costume.rs  mod.rs
src/api/idle/: idle.rs  mapping.rs  mod.rs  transition.rs
src/api/text/: bubble.rs  font.rs  mod.rs  text.rs
src/collection/: actions.rs  algorithms.rs  cameras.rs  costumes.rs  favorite_actions.rs  hairdos.rs  idles.rs  materials.rs  mod.rs  role.rs  roles.rs  scenes.rs  texts.rs  timbres.rs
src/document/: action.rs  algorithm.rs  camera.rs  costume.rs  favorite_action.rs  hairdo.rs  idle.rs  material.rs  mod.rs  role.rs  scene.rs  text.rs  timbre.rs
src/guard/: auth.rs  json.rs  mod.rs
