[package]
edition = "2021"
name = "config_server"
version = "0.1.0"

[features]
dev = []

[dependencies]
chrono = "0.4.38"
clap = {version = "4.5.7", features = ["derive"]}
flate2 = "1.0.30"
futures = "0.3.30"
mongodb = "3.0.0"
nanoid = "0.4.0"
once_cell = "1.19.0"
regex = "1.10.5"
reqwest = {version = "0.12.5", features = ["json"]}
rocket = {version = "0.5.1", features = ["json"]}
serde = "1.0.203"
serde_json = "1.0.117"
sha2 = "0.10.8"
struct-field-names-as-array = "0.3.0"
